feat: implement modal for order requests and update UI components
- Added a modal for order requests with form fields for company name, INN, contact details, and product quantity.
- Updated buttons across the application to trigger the modal.
- Refactored alert section into a separate partial for better code organization.
- Introduced new button styles and form control enhancements for improved user experience.
- Added new SVG icons for modal close functionality.
- Updated SCSS variables and styles for buttons, forms, and modals to align with design specifications.

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,9 @@
                   Каталог <br> ASIC-майнеров
                 </h2>
 
-                <button type="button" class="btn btn-40px btn-warm btn-bg-gradient btn-border-gradient">
+                <button type="button" class="btn btn-40px btn-gradient-warm btn-bg-gradient btn-border-gradient"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modal-order">
                   Оставить заявку
                 </button>
               </div>
@@ -274,27 +276,29 @@
 
                             <div class="row g-0px">
                               <div class="col-12">
-                                <div class="row gy-6px gx-lg-8px gx-20px">
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        от
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="1000" aria-label="от">
+                                <div class="d-flex flex-column gap-4px">
+                                  <div class="row gy-6px gx-lg-8px gx-20px">
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          от
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="1000" aria-label="от">
+                                      </div>
+                                    </div>
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          до
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
+                                      </div>
                                     </div>
                                   </div>
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        до
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
-                                    </div>
-                                  </div>
-                                </div>
 
-                                <div class="invalid-feedback d-block">
-                                  Укажите значения от 1000 до 9000
+                                  <div class="invalid-feedback d-block">
+                                    Укажите значения от 1000 до 9000
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -309,27 +313,29 @@
 
                             <div class="row g-0px">
                               <div class="col-12">
-                                <div class="row gy-6px gx-lg-8px gx-20px">
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        от
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="3000" aria-label="от">
+                                <div class="d-flex flex-column gap-4px">
+                                  <div class="row gy-6px gx-lg-8px gx-20px">
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          от
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="3000" aria-label="от">
+                                      </div>
+                                    </div>
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          до
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="3900" aria-label="до">
+                                      </div>
                                     </div>
                                   </div>
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        до
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="3900" aria-label="до">
-                                    </div>
-                                  </div>
-                                </div>
 
-                                <div class="invalid-feedback">
-                                  Укажите значения от 1000 до 9000
+                                  <div class="invalid-feedback">
+                                    Укажите значения от 1000 до 9000
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -361,27 +367,29 @@
 
                             <div class="row g-0px">
                               <div class="col-12">
-                                <div class="row gy-6px gx-lg-8px gx-20px">
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        от
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="1" aria-label="от">
+                                <div class="d-flex flex-column gap-4px">
+                                  <div class="row gy-6px gx-lg-8px gx-20px">
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          от
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="1" aria-label="от">
+                                      </div>
+                                    </div>
+                                    <div class="col-6">
+                                      <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                        <span>
+                                          до
+                                        </span>
+                                        <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
+                                      </div>
                                     </div>
                                   </div>
-                                  <div class="col-6">
-                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
-                                      <span>
-                                        до
-                                      </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
-                                    </div>
-                                  </div>
-                                </div>
 
-                                <div class="invalid-feedback">
-                                  Укажите значения от 1000 до 9000
+                                  <div class="invalid-feedback">
+                                    Укажите значения от 1000 до 9000
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -537,27 +545,7 @@
                     "type": "default"
                   })
 
-                  <div class="alert" role="alert">
-                    <span class="alert-background d-none d-lg-block" style="background-image: url(./img/bg/banner.webp);"></span>
-                    <span class="alert-background d-lg-none" style="background-image: url(./img/bg/banner--mobile.webp);"></span>
-                    <div class="alert-content">
-                      <h4 class="alert-heading">Нужна помошь в выборе устройства?</h4>
-                      <p class="d-none d-lg-block">
-                        Закажите бесплатный обратный звонок и наши специалисты свяжутся с вами
-                      </p>
-                      <div class="d-flex flex-lg-row flex-column align-self-lg-center align-self-stretch">
-                        <button type="button" class="btn btn-bg-gradient btn-border-gradient alert-btn">
-                          <span>Заказать обратный звонок</span>
-
-                          <span class="icon">
-                            <svg>
-                              <use xlink:href="img/icons/phone-bordered.svg#svg-phone-bordered"></use>
-                            </svg>
-                          </span>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
+                  @include('partials/alert.html')
 
                   @include('partials/card.html', {
                     "type": "default"
@@ -806,7 +794,7 @@
                   </div>
                 </label>
 
-                <button type="submit" class="btn btn-40px btn-warm btn-bg-gradient btn-border-gradient">
+                <button type="submit" class="btn btn-40px btn-gradient-warm btn-bg-gradient btn-border-gradient">
                   Оставить заявку
                 </button>
               </div>
@@ -818,6 +806,8 @@
 
     @include('partials/footer.html')
   </div>
+
+  @include('partials/modals.html')
 </body>
 
 </html>
