--- a/app/product.html
+++ b/app/product.html
@@ -445,7 +445,9 @@
                                 -
                               </button>
                             </div>
-                            <button type="button" class="btn btn-40px btn-primary flex-fill">
+                            <button type="button" class="btn btn-40px btn-primary flex-fill"
+                              data-bs-toggle="modal"
+                              data-bs-target="#modal-order">
                               Заказать
                             </button>
                           </div>
@@ -540,7 +542,7 @@
                         <div class="col-lg-6">
                           <div class="h-100 d-flex">
                             <div class="input-group flex-fill">
-                              <input type="text" class="form-control" placeholder="Тариф электроэнергии" aria-label="Тариф электроэнергии">
+                              <input type="text" class="form-control form-control-lg" placeholder="Тариф электроэнергии" aria-label="Тариф электроэнергии">
                               <span class="input-group-text">
                                 руб./ кВт*ч
                               </span>
@@ -673,26 +675,29 @@
                 </div>
 
                 <div class="alert" role="alert">
-                  <span class="alert-background d-none d-lg-block" style="background-image: url(./img/bg/banner.webp);"></span>
-                  <span class="alert-background d-lg-none" style="background-image: url(./img/bg/banner--mobile.webp);"></span>
-                  <div class="alert-content">
-                    <h4 class="alert-heading">Нужна помошь в выборе устройства?</h4>
-                    <p class="d-none d-lg-block">
-                      Закажите бесплатный обратный звонок и наши специалисты свяжутся с вами
-                    </p>
-                    <div class="d-flex flex-lg-row flex-column align-self-lg-center align-self-stretch">
-                      <button type="button" class="btn btn-bg-gradient btn-border-gradient alert-btn">
-                        <span>Заказать обратный звонок</span>
+  <span class="alert-background d-none d-lg-block" style="background-image: url(./img/bg/banner.webp);"></span>
+  <span class="alert-background d-lg-none" style="background-image: url(./img/bg/banner--mobile.webp);"></span>
+  <div class="alert-content">
+    <h4 class="alert-heading">Нужна помошь в выборе устройства?</h4>
+    <p class="d-none d-lg-block">
+      Закажите бесплатный обратный звонок и наши специалисты свяжутся с вами
+    </p>
+    <div class="d-flex flex-lg-row flex-column align-self-lg-center align-self-stretch">
+      <button type="button" class="btn btn-bg-gradient btn-border-gradient alert-btn"
+        data-bs-toggle="modal"
+        data-bs-target="#modal-order">
+        <span>Заказать обратный звонок</span>
 
-                        <span class="icon">
-                          <svg>
-                            <use xlink:href="img/icons/phone-bordered.svg#svg-phone-bordered"></use>
-                          </svg>
-                        </span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+        <span class="icon">
+          <svg>
+            <use xlink:href="img/icons/phone-bordered.svg#svg-phone-bordered"></use>
+          </svg>
+        </span>
+      </button>
+    </div>
+  </div>
+</div>
+
               </div>
             </div>
 
@@ -1006,7 +1011,7 @@
           <div class="d-flex flex-column gap-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
-                <a href="#" class="btn btn-plaintext btn-title">
+                <a href="./" class="btn btn-plaintext btn-title">
                   <span>Другие предложения</span>
 
                   <span class="icon">
@@ -1099,7 +1104,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1191,7 +1198,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1283,7 +1292,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1375,7 +1386,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1467,7 +1480,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1559,7 +1574,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1651,7 +1668,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1743,7 +1762,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
@@ -1985,7 +2006,7 @@
                   </div>
                 </label>
 
-                <button type="submit" class="btn btn-40px btn-warm btn-bg-gradient btn-border-gradient">
+                <button type="submit" class="btn btn-40px btn-gradient-warm btn-bg-gradient btn-border-gradient">
                   Оставить заявку
                 </button>
               </div>
@@ -2005,7 +2026,9 @@
         </div>
 
         <div>
-          <button type="button" class="btn footer-contacts-callback">
+          <button type="button" class="btn footer-contacts-callback"
+            data-bs-toggle="modal"
+            data-bs-target="#modal-order">
             <span>Заказать обратный звонок</span>
             <span class="icon">
               <svg>
@@ -2241,6 +2264,111 @@
 </footer>
 
   </div>
+
+  <div class="modal modal-form fade" id="modal-order" tabindex="-1" aria-labelledby="modal-order-label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title fs-5" id="modal-order-label">
+          Заявка на оборудование
+        </h3>
+        <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
+          <span class="icon">
+            <svg>
+              <use xlink:href="img/icons/close-rounded.svg#svg-close-rounded"></use>
+            </svg>
+          </span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-8px">
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg" type="text" name="company" placeholder="Название компании*" aria-label="Название компании*" required>
+              <div class="invalid-feedback">
+                Укажиите ваше название компании
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg" type="text" name="inn" placeholder="ИНН компании*" aria-label="ИНН компании*" required>
+              <div class="invalid-feedback">
+                Укажиите ваш ИНН компании
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg is-invalid" type="text" name="name" placeholder="Ваше имя*" aria-label="Ваше имя*" required>
+              <div class="invalid-feedback d-block">
+                Укажиите ваше имя
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg" type="tel" name="tel" placeholder="Контактный телефон*" aria-label="Контактный телефон*" required>
+              <div class="invalid-feedback">
+                Укажиите ваш контактный телефон
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg" type="email" name="email" placeholder="Электронный адрес*" aria-label="Электронный адрес*" required>
+              <div class="invalid-feedback">
+                Укажиите ваш электронный адрес
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <input class="form-control form-control-lg pe-none" type="text" name="email" placeholder="Товар*" aria-label="Товар*" value="Antminer S21 XP – 270 TH/s" readonly>
+              <div class="invalid-feedback">
+                Укажиите ваш товар
+              </div>
+            </div>
+            <div class="d-flex flex-column gap-8px">
+              <div class="counter counter-lg counter--fill flex-fill" data-counter="">
+                <button type="button" class="btn counter-btn" data-counter-decrement="">
+                  -
+                </button>
+                <label class="counter-current">
+                  <input type="text" class="form-control-plaintext" name="counter" placeholder="Количество" value="200" data-counter-current="" required>
+                </label>
+                <button type="button" class="btn counter-btn" data-counter-increment="">
+                  +
+                </button>
+              </div>
+              <div class="invalid-feedback">
+                Укажиите кол-во товара
+              </div>
+            </div>
+            <ul class="list-group list-group--plaintext gap-4px fs-12px lh-normal text-gray-600">
+              <li class="list-group-item">
+                <div class="d-flex gap-8px">
+                  <span>Итого:</span>
+                  <span class="fw-bold">26 327 000 ₽</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <div class="d-flex flex-column gap-8px">
+            <label class="form-check form-check-lg form-check--gradient-warm align-items-start">
+              <input class="form-check-input" type="checkbox" name="policy" checked required>
+              <div class="form-check-label">
+                Я согласен на обработку моих персональных данных и ознакомился с <a href="#" target="_blank" class="link-orange-600 link-offset-1">Политикой обработки персональных данных</a>.
+              </div>
+            </label>
+            <div class="invalid-feedback">
+              Чтобы продолжить нужно согласиться с обработкой ваших персональных данных
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="d-flex gap-16px">
+          <button type="button" class="btn btn-lg btn-bg-gradient btn-border-gradient btn-gradient-warm flex-fill">
+            Отправить заявку
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 
 </html>
