--- a/src/product.html
+++ b/src/product.html
@@ -361,7 +361,8 @@
                   <div class="col-lg-7">
                     <div class="h-100 d-flex flex-column gap-16px bg-white rounded-8px p-10px p-lg-20px">
                       @include('partials/card.html', {
-                        "type": "calc"
+                        "type": "calc",
+                        "tags": false,
                       })
                       <div class="row g-8px">
                         <div class="col-lg-6">
@@ -830,42 +831,50 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": true,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": true,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                   <div class="swiper-slide">
                     @include('partials/card.html', {
-                      "type": "default"
+                      "type": "default",
+                      "tags": false,
                     })
                   </div>
                 </div>
@@ -874,236 +883,9 @@
           </div>
         </div>
       </section>
-      <section class="section">
-        <div class="container">
-          <div class="banner">
-            <picture class="d-md-block d-none">
-              <source srcset="./img/bg/banner-tg-1.webp" type="image/webp">
-              <img loading="lazy" src="./img/bg/banner-tg-1.png" class="img-fluid" width="344" height="189" alt="Картинка">
-            </picture>
-            <div class="banner-content">
-              <h4>
-                Мы в Telegram
-              </h4>
-              <button type="button" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-telegram">
-                <span>Подписаться на канал</span>
-                <span class="icon">
-                  <svg>
-                    <use xlink:href="img/icons/telegram-2.svg#svg-telegram-2"></use>
-                  </svg>
-                </span>
-              </button>
-            </div>
-            <picture class="d-md-block d-none">
-              <source srcset="./img/bg/banner-tg-2.webp" type="image/webp">
-              <img loading="lazy" src="./img/bg/banner-tg-2.png" class="img-fluid" width="344" height="189" alt="Картинка">
-            </picture>
-            <picture class="d-md-none">
-              <source srcset="./img/bg/banner-tg-2--mobile.webp" type="image/webp">
-              <img loading="lazy" src="./img/bg/banner-tg-2--mobile.png" class="img-fluid" width="353" height="256" alt="Картинка">
-            </picture>
-          </div>
-        </div>
-      </section>
-      <section class="section">
-        <div class="container">
-          <form class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 pt-28px pt-md-32px pt-lg-48px pb-38px pb-lg-56px px-12px">
-            <span class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/callback.webp);"></span>
-            <span class="d-block d-md-none rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/callback--mobile.webp);"></span>
-            <div class="d-flex flex-column align-items-center gap-lg-48px gap-20px">
-              <div class="d-flex flex-column align-items-center gap-lg-28px gap-16px ls-n5 text-center">
-                <h2 class="fs-lg-36px fs-24px fw-medium lh-normal m-0px">
-                  Готовы обсудить сотрудничество или нужна консультация?
-                </h2>
-                <p class="fs-lg-24px fs-16px lh-normal m-0px">
-                  Просто оставьте заявку — мы скоро свяжемся с вами.
-                </p>
-              </div>
 
-              <div class="d-flex flex-column flex-md-row align-items-center gap-lg-36px gap-md-24px gap-20px">
-                <div class="fs-lg-20px fs-16px lh-normal">
-                  <p class="m-0px">
-                    Вы
-                  </p>
-                </div>
-                <div class="d-flex flex-wrap align-items-center justify-content-center gap-lg-36px gap-md-24px gap-12px">
-                  <label class="form-check form-check--light">
-                    <input type="radio" class="form-check-input" name="radioDefault" checked
-                      data-radio-view="0">
-                    <div class="form-check-label fs-lg-16px fs-12px lh-normal">
-                      Физическое лицо
-                    </div>
-                  </label>
-                  <label class="form-check form-check--light">
-                    <input type="radio" class="form-check-input" name="radioDefault"
-                      data-radio-view="1">
-                    <div class="form-check-label fs-lg-16px fs-12px lh-normal">
-                      Юридическое лицо/ИП
-                    </div>
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <div class="d-flex flex-column gap-lg-40px gap-28px ps-md-24px ps-xxl-80px pe-xxl-48px">
-              <div class="row gx-xxl-48px gx-md-20px gy-16px"
-                data-form-view="0">
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Имя*
-                        </p>
-                      </div>
-                      <input type="text" class="form-control" placeholder="Как к вам обращаться?" aria-label="Как к вам обращаться?">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Номер телефона*
-                        </p>
-                      </div>
-                      <input type="tel" class="form-control" placeholder="+7 (000) 000-00-00" aria-label="+7 (000) 000-00-00">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          E-mail*
-                        </p>
-                      </div>
-                      <input type="email" class="form-control" placeholder="+7 (000) 000-00-00" aria-label="+7 (000) 000-00-00">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Тема обращения*
-                        </p>
-                      </div>
-                      <select data-choices="" data-placeholder="Выберите из списка">
-                        <option value="0">Популярные</option>
-                        <option value="1">Новинки</option>
-                        <option value="2">Дешевле</option>
-                        <option value="3">Дороже</option>
-                        <option value="4">В наличии</option>
-                        <option value="5">Под заказ</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="flex-fill d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Текст обращения*
-                        </p>
-                      </div>
-                      <textarea class="form-control flex-fill" rows="5" placeholder="Введите ваш запрос"></textarea>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row gx-xxl-48px gx-md-20px gy-16px"
-                data-form-view="1">
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Имя*
-                        </p>
-                      </div>
-                      <input type="text" class="form-control" placeholder="Как к вам обращаться?" aria-label="Как к вам обращаться?">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Номер телефона*
-                        </p>
-                      </div>
-                      <input type="tel" class="form-control" placeholder="+7 (000) 000-00-00" aria-label="+7 (000) 000-00-00">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          E-mail*
-                        </p>
-                      </div>
-                      <input type="email" class="form-control" placeholder="+7 (000) 000-00-00" aria-label="+7 (000) 000-00-00">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Наименование юридического лица*
-                        </p>
-                      </div>
-                      <input type="text" class="form-control" placeholder="Укажите юридическое наименование" aria-label="Укажите юридическое наименование">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          ИНН*
-                        </p>
-                      </div>
-                      <input type="text" class="form-control" placeholder="Введите ИНН" aria-label="Введите ИНН">
-                    </div>
-                    <div class="d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Тема обращения*
-                        </p>
-                      </div>
-                      <select data-choices="" data-placeholder="Выберите из списка">
-                        <option value="0">Популярные</option>
-                        <option value="1">Новинки</option>
-                        <option value="2">Дешевле</option>
-                        <option value="3">Дороже</option>
-                        <option value="4">В наличии</option>
-                        <option value="5">Под заказ</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="h-100 d-flex flex-column gap-lg-28px gap-md-20px gap-16px">
-                    <div class="flex-fill d-flex flex-column gap-16px">
-                      <div class="fs-lg-16px fs-md-12px fs-16px lh-normal ls-n5">
-                        <p class="m-0px">
-                          Текст обращения*
-                        </p>
-                      </div>
-                      <textarea class="form-control flex-fill" rows="5" placeholder="Введите ваш запрос"></textarea>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="d-flex flex-column flex-md-row align-items-center gap-lg-72px gap-md-12px gap-40px">
-                <label class="form-check form-check-md form-check--light mw-360px align-items-md-center align-items-start gap-md-8px gap-32px">
-                  <input class="form-check-input" type="checkbox">
-                  <div class="form-check-label">
-                    Я принимаю условия и положения, подтверждаю предоставление точных данных и соглашаюсь с <a href="#" target="_blank">политикой конфиденциальности</a>.
-                  </div>
-                </label>
-
-                <button type="submit" class="btn btn-40px btn-gradient-warm btn-bg-gradient btn-border-gradient">
-                  Оставить заявку
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </section>
+      @include('partials/sections/telegram.html')
+      @include('partials/sections/callback.html')
     </main>
 
     @include('partials/footer.html')
