--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                     <h3 class="d-lg-none fs-14px fw-normal lh-lg mb-10px">
                       Фильтр
                     </h3>
-                    <form class="bg-gray-200 rounded-12px p-lg-12px py-28px px-20px shadow" style="--bs-bg-opacity: .50">
+                    <form class="bg-gray-200 bg-opacity-50 rounded-12px p-lg-12px py-28px px-20px shadow">
                       <div class="separator">
                         <div class="accordion accordion--separator accordion--plaintext">
                           <div class="accordion-item">
