--- a/app/product.html
+++ b/app/product.html
@@ -20,8 +20,10 @@
   <link rel="preload" href="fonts/Manrope-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/bootstrap.js"></script>
   <script defer src="js/main.js"></script>
 </head>
 
@@ -1740,8 +1742,8 @@
           type="image/png"
           media="(max-width: 767.98px)"
         />
-        <source srcset="./img/bg/banner-tg-2.webp" type="image/webp">
-        <img loading="lazy" src="./img/bg/banner-tg-2.png" class="img-fluid" width="344" height="189" alt="Картинка">
+        <source srcset="./img/telegram/image-2.webp" type="image/webp">
+        <img loading="lazy" src="./img/telegram/image-2.png" class="img-fluid" width="344" height="189" alt="Картинка">
       </picture>
     </div>
   </div>
