--- a/app/product.html
+++ b/app/product.html
@@ -783,10 +783,10 @@
               </div>
 
               <div class="alert" role="alert">
-  <span class="alert-background d-none d-lg-block" style="background-image: url(./img/bg/banner.webp);"></span>
-  <span class="alert-background d-lg-none" style="background-image: url(./img/bg/banner--mobile.webp);"></span>
+  <span class="alert-background d-none d-md-block" style="background-image: url(./img/bg/banner.webp);"></span>
+  <span class="alert-background d-md-none" style="background-image: url(./img/bg/banner--mobile.webp);"></span>
   <div class="alert-content">
-    <h4 class="alert-heading">Нужна помошь в выборе устройства?</h4>
+    <h4 class="alert-heading">Нужна помошь в&nbsp;выборе устройства?</h4>
     <p class="d-none d-lg-block">
       Закажите бесплатный обратный звонок и наши специалисты свяжутся с вами
     </p>
@@ -794,7 +794,7 @@
       <button type="button" class="btn btn-bg-gradient btn-border-gradient alert-btn"
         data-bs-toggle="modal"
         data-bs-target="#modal-order">
-        <span>Заказать обратный звонок</span>
+        <span>Заказать обратный&nbsp;звонок</span>
 
         <span class="icon">
           <svg>
