ready index.html

--- a/app/catalog-old.html
+++ b/app/catalog-old.html
@@ -1924,7 +1924,7 @@
         </div>
 
         <div>
-          <button type="button" class="btn footer-contacts-callback"
+          <button type="button" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-has-icon footer-contacts-callback"
             data-bs-toggle="modal"
             data-bs-target="#modal-order">
             <span>Заказать обратный звонок</span>
