--- a/app/product.html
+++ b/app/product.html
@@ -827,17 +827,17 @@
                       </div>
                       <ul class="list-group list-group--plaintext fs-10px fs-lg-14px fw-medium gap-lg-16px gap-8px">
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>YUCHAI YC6K500N-D30, 1шт - 1 200 000$</p>
                           </div>
                         </li>
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>ANTSPACE HW5 210, 1шт. - 200 000$</p>
                           </div>
                         </li>
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>ANTMINER S21, 186TH/s, 500 шт. - 200 000$</p>
                           </div>
                         </li>
@@ -2141,7 +2141,7 @@
         </div>
 
         <div>
-          <button type="button" class="btn footer-contacts-callback"
+          <button type="button" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-has-icon footer-contacts-callback"
             data-bs-toggle="modal"
             data-bs-target="#modal-order">
             <span>Заказать обратный звонок</span>
