--- a/src/product.html
+++ b/src/product.html
@@ -666,17 +666,17 @@
                       </div>
                       <ul class="list-group list-group--plaintext fs-10px fs-lg-14px fw-medium gap-lg-16px gap-8px">
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>YUCHAI YC6K500N-D30, 1шт - 1 200 000$</p>
                           </div>
                         </li>
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>ANTSPACE HW5 210, 1шт. - 200 000$</p>
                           </div>
                         </li>
                         <li class="list-group-item">
-                          <div class="glass bg-black bg-opacity-10 rounded-20px py-8px px-20px">
+                          <div class="glass bg-black bg-opacity-10 rounded-pill py-8px px-20px">
                             <p>ANTMINER S21, 186TH/s, 500 шт. - 200 000$</p>
                           </div>
                         </li>
