--- a/src/index.html
+++ b/src/index.html
@@ -159,9 +159,9 @@
 
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
-              <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
+              <h2 class="d-flex mb-0px fs-20px fs-md-28px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
                   <span>Каталог устройств</span>
 
@@ -250,9 +250,9 @@
 
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
-              <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
+              <h2 class="d-flex mb-0px fs-20px fs-md-28px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
                   <span>Каталог контейнеров</span>
 
@@ -341,9 +341,9 @@
 
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
-              <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
+              <h2 class="d-flex mb-0px fs-20px fs-md-28px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
                   <span>Газопоршневые установки</span>
 
