--- a/app/product-old.html
+++ b/app/product-old.html
@@ -2088,9 +2088,32 @@
   <div class="container">
     <div class="d-flex flex-column flex-xl-row gap-24px justify-content-lg-between br-top pt-24px pt-lg-80px">
       <div class="footer-contacts">
-        <div class="d-flex flex-column gap-10px gap-lg-18px">
-          <p class="m-0px">Свяжитесь с нами</p>
-          <a href="tel:+88004444852" class="btn btn-phone">8 800 4444 852</a>
+        <div class="d-flex flex-column gap-2px gap-md-8px gap-lg-16px">
+          <p class="fs-14px fs-md-16px fw-semibold m-0px">Свяжитесь с нами</p>
+          <div class="d-flex align-items-center gap-16px">
+            <a href="tel:+88004444852" class="btn btn-phone">8 800 4444 852</a>
+
+            <ul class="navbar-socials">
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/telegram-fill.svg#svg-telegram-fill"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/whatsapp-2.svg#svg-whatsapp-2"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div>
@@ -2253,9 +2276,9 @@
         </div>
       </nav>
     </div>
-    <div class="d-flex justify-content-between mt-24px mt-lg-40px pt-24px pt-lg-48px br-top">
-      <div class="navbar navbar-contacts">
-        <ul class="navbar-nav">
+    <div class="d-flex flex-column flex-md-row justify-content-between gap-20px mt-24px mt-lg-40px pt-24px pt-lg-48px br-top">
+      <div class="navbar navbar-contacts flex-nowrap align-items-stretch justify-content-between justify-content-sm-start gap-8px gap-md-24px gap-lg-32px gap-xl-40px">
+        <ul class="navbar-nav flex-fill">
           <li class="nav-item">
             <h3 class="nav-item-title">
               Контакты
@@ -2288,13 +2311,42 @@
                   <use xlink:href="img/icons/location.svg#svg-location"></use>
                 </svg>
               </span>
-              <span>Москва, ул. Примерная, д. 1</span>
+              <span>Москва, ул.&nbsp;Примерная, д.&nbsp;1</span>
             </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav flex-fill">
+          <li class="nav-item">
+            <h3 class="nav-item-title fs-12px fs-lg-14px">
+              Мы в социальных сетях
+            </h3>
+          </li>
+          <li class="nav-item">
+            <ul class="navbar-socials">
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/rbk.svg#svg-rbk"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/vk.svg#svg-vk"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
 
-      <div class="mw-520px flex-fill d-flex flex-column-reverse flex-lg-row align-items-end align-self-lg-end justify-content-between gap-16px">
+      <div class="d-flex align-items-center gap-16px">
         <div class="navbar-brand">
   <a href="./" class="btn navbar-brand-link">
     <span class="icon">
@@ -2305,27 +2357,6 @@
   </a>
 </div>
 
-
-        <ul class="navbar-socials">
-          <li class="navbar-item">
-            <a href="#" class="btn nav-link">
-              <span class="icon">
-                <svg>
-                  <use xlink:href="img/icons/telegram-fill.svg#svg-telegram-fill"></use>
-                </svg>
-              </span>
-            </a>
-          </li>
-          <li class="navbar-item">
-            <a href="#" class="btn nav-link">
-              <span class="icon">
-                <svg>
-                  <use xlink:href="img/icons/whatsapp-2.svg#svg-whatsapp-2"></use>
-                </svg>
-              </span>
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
