added leasing page

--- a/app/catalog-old.html
+++ b/app/catalog-old.html
@@ -2171,6 +2171,24 @@
                   </span>
                 </a>
               </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/vedomosti.svg#svg-vedomosti"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/vc.svg#svg-vc"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
             </ul>
           </li>
         </ul>
