--- a/app/index.html
+++ b/app/index.html
@@ -252,6 +252,7 @@
             <div class="row g-4px g-md-8px">
               <div class="col-6 col-lg-4 order-md-1 order-lg-0">
                 <div class="offer ">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="offer-content">
     <h3 class="offer-title">
       Оборудование для майнинга 
@@ -259,7 +260,7 @@
     <p class="offer-text">
       официальный партнер производителей: Bitmain, MicroBT и Canaan
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Каталог устройств
     </a>
   </div>
@@ -284,6 +285,7 @@
                 <div class="row g-8px d-contents d-lg-flex">
                   <div class="col-6 col-lg-12 order-md-3 order-lg-0">
                     <div class="offer ">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="offer-content">
     <h3 class="offer-title">
       Контейнеры для майнинга
@@ -291,7 +293,7 @@
     <p class="offer-text">
       С использованием воздушного, водяного и иммерсионного охлаждения
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Каталог контейнеров
     </a>
   </div>
@@ -314,6 +316,7 @@
                   </div>
                   <div class="col-6 col-lg-12 order-md-3 order-lg-0">
                     <div class="offer ">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="offer-content">
     <h3 class="offer-title">
       Газопоршневые установки
@@ -321,7 +324,7 @@
     <p class="offer-text">
       От ведущих китайских производителей
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Каталог ГПУ
     </a>
   </div>
@@ -346,6 +349,7 @@
               </div>
               <div class="col-6 col-lg-4 order-md-2 order-lg-0">
                 <div class="offer offer--bg">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="offer-content">
     <h3 class="offer-title">
       Размещение в дата-центрах
@@ -353,7 +357,7 @@
     <p class="offer-text">
       В России и Эфиопии
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Подробнее
     </a>
   </div>
@@ -3243,7 +3247,7 @@
                       <button type="button" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-warm">
                         <span>Оставить заявку</span>
                       </button>
-                      <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-teal">
+                      <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-light-to-teal-400">
                         <span>Подробнее</span>
                       </a>
                     </div>
@@ -3286,6 +3290,7 @@
           <div class="row g-8px g-md-16px">
             <div class="col-md-6">
               <div class="tool">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="tool-content">
     <h3 class="tool-title">
       Лизинг оборудования
@@ -3293,7 +3298,7 @@
     <p class="tool-text">
       Предлагаю разместить подзаголовок
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Подробнее
     </a>
   </div>
@@ -3307,6 +3312,7 @@
             </div>
             <div class="col-md-6">
               <div class="tool">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="tool-content">
     <h3 class="tool-title">
       Факторинг
@@ -3314,7 +3320,7 @@
     <p class="tool-text">
       Предлагаю разместить подзаголовок
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Подробнее
     </a>
   </div>
@@ -3944,6 +3950,24 @@
                   <span class="icon">
                     <svg>
                       <use xlink:href="img/icons/vk.svg#svg-vk"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/vedomosti.svg#svg-vedomosti"></use>
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="navbar-item">
+                <a href="#" class="btn nav-link">
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/vc.svg#svg-vc"></use>
                     </svg>
                   </span>
                 </a>
